--- a/messageforums-api/pom.xml
+++ b/messageforums-api/pom.xml
@@ -36,6 +36,12 @@
 	       <groupId>org.sakaiproject.kernel</groupId>
 	       <artifactId>sakai-component-manager</artifactId>
 	    </dependency>
+		<dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-api</artifactId>
+            <version>2.8-SNAPSHOT</version>
+            <scope>provided</scope>
+      </dependency>
 	</dependencies>
 	<build>
 		<resources />
