--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -85,6 +85,13 @@
        		<groupId>org.springframework</groupId>
        		<artifactId>spring</artifactId>
      	</dependency>
+      <dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-api</artifactId>
+            <version>2.8-SNAPSHOT</version>
+            <scope>provided</scope>
+      </dependency>
+
 	</dependencies>
 	<build>
 		<resources>
