--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -93,6 +93,12 @@
        <version>1.6.6</version>
        <scope>provided</scope>
     </dependency>
+		<dependency>
+            <groupId>org.sakaiproject.scheduler</groupId>
+            <artifactId>scheduler-api</artifactId>
+            <version>2.8-SNAPSHOT</version>
+            <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <resources>
