--- a/pom.xml
+++ b/pom.xml
@@ -164,6 +164,12 @@
                 <version>1.3.0-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
+					<dependency>
+						<groupId>org.sakaiproject.scheduler</groupId>
+						<artifactId>scheduler-api</artifactId>
+						<version>2.8-SNAPSHOT</version>
+        		<scope>provided</scope>
+					</dependency>
         </dependencies>
     </dependencyManagement>
     <reporting>
