--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
         <groupId>org.sakaiproject.edu-services.gradebook</groupId>
         <artifactId>gradebook-service-api</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1.0-a01</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -96,7 +96,7 @@
 		<dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-api</artifactId>
-            <version>2.8-SNAPSHOT</version>
+            <version>2.8.0-a01</version>
             <scope>provided</scope>
     </dependency>
   </dependencies>
