--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.8-SNAPSHOT</version>
+        <version>2.8.0-a01</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -137,39 +137,39 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.8-SNAPSHOT</version>
+                <version>2.8.0-a01</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
-                <version>1.1-SNAPSHOT</version>
+                <version>1.1.0-a01</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
-                <version>1.1-SNAPSHOT</version>
+                <version>1.1.0-a01</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
-                <version>1.1-SNAPSHOT</version>
+                <version>1.1.0-a01</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
-                <version>1.3.0-SNAPSHOT</version>
+                <version>1.3.0-a01</version>
                 <scope>provided</scope>
             </dependency>
-					<dependency>
-						<groupId>org.sakaiproject.scheduler</groupId>
-						<artifactId>scheduler-api</artifactId>
-						<version>2.8-SNAPSHOT</version>
+			<dependency>
+				<groupId>org.sakaiproject.scheduler</groupId>
+				<artifactId>scheduler-api</artifactId>
+				<version>2.8.0-a01</version>
         		<scope>provided</scope>
-					</dependency>
+			</dependency>
         </dependencies>
     </dependencyManagement>
     <reporting>
