--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
-    <version>2.7.2-SNAPSHOT</version>
+    <version>2.7.2-rc01</version>
   </parent>
   <name>Sakai Message Forums Component Implementaiton</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
