--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
-    <version>2.7.2-SNAPSHOT</version>
+    <version>2.7.2-rc01</version>
     <artifactId>msgcntr</artifactId>
     <packaging>pom</packaging>
     <modules>
@@ -24,9 +24,9 @@
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
     </properties>
     <scm>
-      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</developerConnection>
-    <url>https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</url>
+      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.7.2-rc01</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.7.2-rc01</developerConnection>
+    <url>https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.7.2-rc01</url>
   </scm>
     <distributionManagement>
         <downloadUrl>http://source.sakaiproject.org/maven2/
