--- a/messageforums-api/pom.xml
+++ b/messageforums-api/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-api</artifactId>
-            <version>2.8.0-a02</version>
+            <version>${sakai.scheduler.version}</version>
             <scope>provided</scope>
       </dependency>
 	</dependencies>
