--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -35,6 +35,7 @@
 		<dependency>
 			<groupId>org.sakaiproject.jsf</groupId>
 			<artifactId>jsf-tool-sun</artifactId>
+            <version>${sakai.jsf.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
@@ -62,7 +63,7 @@
 		<dependency>
             <groupId>org.sakaiproject.edu-services.gradebook</groupId>
             <artifactId>gradebook-service-api</artifactId>
-            <version>1.1.0-a02</version>
+            <version>${sakai.edu-services.version}</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
@@ -88,7 +89,7 @@
       <dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-api</artifactId>
-            <version>2.8.0-a02</version>
+            <version>${sakai.scheduler.version}</version>
             <scope>provided</scope>
       </dependency>
 
