--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
         <groupId>org.sakaiproject.edu-services.gradebook</groupId>
         <artifactId>gradebook-service-api</artifactId>
-        <version>1.1.0-a02</version>
+        <version>${sakai.edu-services.version}</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -86,6 +86,7 @@
     <dependency>
     	<groupId>org.sakaiproject.search</groupId>
     	<artifactId>search-api</artifactId>
+        <scope>provided</scope>
     </dependency>
     <dependency>
        <groupId>org.opensymphony.quartz</groupId>
@@ -96,7 +97,7 @@
 		<dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-api</artifactId>
-            <version>2.8.0-a02</version>
+            <version>${sakai.scheduler.version}</version>
             <scope>provided</scope>
     </dependency>
   </dependencies>
