--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.8.0-a02</version>
+        <version>2.8.0-a03</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -22,7 +22,12 @@
     </modules>
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sakai.common.version>1.1.0-a03</sakai.common.version>
+        <sakai.edu-services.version>1.1.0-a03</sakai.edu-services.version>
+        <sakai.jsf.version>2.8.0-a03</sakai.jsf.version>
+        <sakai.scheduler.version>2.8.0-a03</sakai.scheduler.version>
+        <sakai.search.version>1.3.0-a05</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
@@ -137,37 +142,37 @@
             <dependency>
                 <groupId>org.sakaiproject.jsf</groupId>
                 <artifactId>jsf-tool-sun</artifactId>
-                <version>2.8.0-a02</version>
+                <version>${sakai.jsf.version}</version>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-privacy-api</artifactId>
-                <version>1.1.0-a02</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-type-api</artifactId>
-                <version>1.1.0-a02</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.common</groupId>
                 <artifactId>sakai-common-manager-api</artifactId>
-                <version>1.1.0-a02</version>
+                <version>${sakai.common.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.sakaiproject.search</groupId>
                 <artifactId>search-api</artifactId>
-                <version>1.3.0-a03</version>
+                <version>${sakai.search.version}</version>
                 <scope>provided</scope>
             </dependency>
 			<dependency>
 				<groupId>org.sakaiproject.scheduler</groupId>
 				<artifactId>scheduler-api</artifactId>
-				<version>2.8.0-a02</version>
+				<version>${sakai.scheduler.version}</version>
         		<scope>provided</scope>
 			</dependency>
         </dependencies>
