--- a/messageforums-assembly/pom.xml
+++ b/messageforums-assembly/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.msgcntr</groupId>
         <artifactId>msgcntr</artifactId>
-        <version>2.8.0-a03-SNAPSHOT</version>
+        <version>2.8.0-a03</version>
     </parent>
     
     <name>Sakai Message Forums Assembly</name>
