--- a/messageforums-component-impl/pom.xml
+++ b/messageforums-component-impl/pom.xml
@@ -84,6 +84,11 @@
       <version>1.3</version>
     </dependency>
     <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
     	<groupId>org.sakaiproject.search</groupId>
     	<artifactId>search-api</artifactId>
         <scope>provided</scope>
