--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>msgcntr</artifactId>
 		<groupId>org.sakaiproject.msgcntr</groupId>
-		<version>2.8.0-b02-SNAPSHOT</version>
+		<version>2.8.0-b02</version>
 	</parent>
 	<name>Sakai Message Forums Tool</name>
 	<groupId>org.sakaiproject.msgcntr</groupId>
