--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.8.0-b05</version>
+        <version>2.8.0-rc01</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -23,11 +23,11 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.common.version>1.1.0-b05</sakai.common.version>
-        <sakai.edu-services.version>1.1.0-b05</sakai.edu-services.version>
-        <sakai.jsf.version>2.8.0-b02</sakai.jsf.version>
-        <sakai.scheduler.version>2.8.0-b04</sakai.scheduler.version>
-        <sakai.search.version>1.3.0-b02</sakai.search.version>
+        <sakai.common.version>1.1.0-rc01</sakai.common.version>
+        <sakai.edu-services.version>1.1.0-rc01</sakai.edu-services.version>
+        <sakai.jsf.version>2.8.0-rc01</sakai.jsf.version>
+        <sakai.scheduler.version>2.8.0-rc01</sakai.scheduler.version>
+        <sakai.search.version>1.3.0-rc01</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
